mule-user-guide/v/3.2/creating-custom-transformers.adoc
= Creating Custom Transformers

Transformers in Mule are used to convert messages from one format to another or to manipulate the message information such as headers and attachments. Mule ESB also provides several standard transformers, including XML transformers (such as XML to Object, XSLT, and DOM to XML), encryption transformers that encrypt and decrypt data, compression transformers that compress and decompress data, and more. For a list of the standard transformers in Mule, see link:https://docs.mulesoft.com/mule-user-guide/v/3.2/using-transformers[Using Transformers].

Since Mule 3 there are two ways to create a transformer.

. Use a link:https://docs.mulesoft.com/mule-user-guide/v/3.2/transformer-annotation[Transformer Annotation] on a method. This transformer will be automatically discovered and will be available to Mule's link:https://docs.mulesoft.com/mule-user-guide/v/3.2/creating-service-objects-and-transformers-using-annotations[automatic transformation engine]. Transformers created this way are not usually referenced in your Mule configuration, instead it will be discovered based on the current type of message payload and the required type need (i.e. the parameter type of a service component method parameter).
. The link:https://docs.mulesoft.com/mule-user-guide/v/3.2/creating-custom-transformer-class[traditional Mule way of creating custom transformers] by extending http://www.mulesoft.org/docs/site/current/apidocs/org/mule/transformer/AbstractTransformer.html[AbstractTransformer].
