mule-user-guide/v/3.8/creating-custom-transformers.adoc
= Creating Custom Transformers
:keywords: customize, custom transformers

Transformers in Mule are used to convert messages from one format to another or to manipulate the message information such as headers and attachments. Mule also provides several standard transformers, including XML transformers (such as XML to Object, XSLT, and DOM to XML), encryption transformers that encrypt and decrypt data, compression transformers that compress and decompress data, and more. For a list of the standard transformers in Mule, see link:/mule-user-guide/v/3.8/using-transformers[Using Transformers].

There are two ways to create a transformer.

. Use a link:/mule-user-guide/v/3.8/transformer-annotation[Transformer Annotation] on a method. This transformer is automatically discovered and is available to Mule's link:/mule-user-guide/v/3.8/creating-flow-objects-and-transformers-using-annotations[automatic transformation engine]. Transformers created this way are not usually referenced in your Mule configuration, instead it is discovered based on the current type of message payload and the required type need, that is, the parameter type of a component method parameter.

. The link:/mule-user-guide/v/3.8/creating-custom-transformer-classes[traditional Mule way of creating custom transformers] by extending `AbstractTransformer`.

== See Also

* link:http://training.mulesoft.com[MuleSoft Training]
* link:https://www.mulesoft.com/webinars[MuleSoft Webinars]
* link:http://blogs.mulesoft.com[MuleSoft Blogs]
* link:http://forums.mulesoft.com[MuleSoft Forums]
* link:https://www.mulesoft.com/support-and-services/mule-esb-support-license-subscription[MuleSoft Support]
* mailto:support@mulesoft.com[Contact MuleSoft]
